# animaldet

./: .gitattributes  .gitignore  Dockerfile  FULL_DOC.md  INSTALL.md  Makefile  README.md  full_doc.tex  pyproject.toml
animaldet/app/: __init__.py  class_names.py  database.py  example_storage.py  main.py  storage.py
animaldet/inference/: __init__.py  onnx_stitcher.py  registry.py  rfdetr.py  rfdetr_onnx.py
animaldet/utils/: __init__.py  device.py
configs/inference/: rfdetr_phase_1.yaml  rfdetr_small.yaml  rfdetr_small_cam.yaml  rfdetr_small_claus.yaml
datos/: README.md
datos/detections/: herdnet_stage1_predictions.csv  herdnet_stage2_detections.csv  rfdetr_stage1_detections (small).csv  rfdetr_stage2_detections (small).csv
datos/latency/: inference_times_herdnet.csv  inference_times_rf_detr_large.csv  inference_times_rf_detr_small.csv
demo_images/: ui_selected.txt
diagrams/: architecture.puml
evaluation/detections/: rfdetr_stage1_detections_points (large).csv  rfdetr_stage1_detections_points (nano).csv  rfdetr_stage2_detections_points (large).csv  rfdetr_stage2_detections_points (nano).csv
evaluation/inference_times/: inference_times_rf_detr_nano.csv
experiments/Notebooks/: detr_train.ipynb  herdnet_train.ipynb
infra/: requirements.txt
modelos/: README.md  rf-detr-nano-animaldet.json  rf-detr-nano-animaldet.onnx  rf-detr-nano-animaldet.pth  rf-detr-small-animaldet.json  rf-detr-small-animaldet.onnx  rf-detr-small-animaldet.pth
notebooks/: README.md  detr_train-Copy1[large].ipynb  detr_train.ipynb  inference_benchmark.ipynb
scripts/: export_rfdetr_to_onnx.py  export_rfdetr_to_torch_script.py
tools/: DEMO_SETUP.md  convert_to_onnx.py  fix_small_model_classes.py  prepare_demo_images.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+71 files in other folders)
