[project]
name = "animaldet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "ipykernel>=7.1.0",
    "pip>=25.3",
    "animaloc",
    "rfdetr",
    "omegaconf>=2.3.0",
    "albumentations>=2.0.8",
    "wandb>=0.22.3",
]

[dependency-groups]
herdnet = [
    "animaloc",
]
rfdetr = [
    "rfdetr",
]
viz = [
    "fiftyone>=1.10.0",
]

[tool.uv.sources]
animaloc = { git = "https://github.com/Alexandre-Delplanque/HerdNet" }
rfdetr = { git = "https://github.com/roboflow/rf-detr" }
