[project]
name = "animaldet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "torch>=2.9.0",
]
herdnet = [
    "animaloc",
]
rfdetr = [
    "rfdetr",
]

[tool.uv.sources]
animaloc = { git = "https://github.com/Alexandre-Delplanque/HerdNet" }
rfdetr = { git = "https://github.com/roboflow/rf-detr" }
