[project]
name = "animaldet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "albumentations>=1.4.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "onnxruntime>=1.23.2",
    "nvidia-ml-py>=13.580.82",
]

[dependency-groups]
herdnet = [
    "animaloc",
    "pandas>=2.0.0",
    "ipykernel>=6.29.0",
]
rfdetr = [
    "rfdetr",
    "omegaconf>=2.3.0",
    "pandas>=2.0.0",
    "ipykernel>=6.29.0",
]

[tool.uv.sources]
animaloc = { git = "https://github.com/Alexandre-Delplanque/HerdNet" }
rfdetr = { git = "https://github.com/roboflow/rf-detr" }
